--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ferrara a Domicilio",
-  "short_name": "FerraraDomicilio",
+  "name": "Montoro a Domicilio",
+  "short_name": "MontoroDomicilio",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
