--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "ferraradomicilio",
+  "name": "montoroadomicilio",
   "version": "1.2.0",
   "license": "MIT",
   "scripts": {
